--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -39,8 +39,8 @@
 						Log in
 					</span>
 
-					<div class="wrap-input100 validate-input" data-validate = "Enter username">
-						<input class="input100" type="text" name="username" placeholder="Username">
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input100" type="email" name="email" placeholder="Email id">
 						<span class="focus-input100" data-placeholder="&#xf207;"></span>
 					</div>
 
@@ -67,6 +67,13 @@
 							Forgot Password?
 						</a>
 					</div>
+
+					<div class="text-center p-t-20">
+						<a class="txt1" href="{% url "signup" %}">
+							Don't have an account? Sign up
+						</a>
+					</div>
+
 				</form>
 			</div>
 		</div>
