--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -25,7 +25,7 @@
 			<div class="login100-more" style="background-image: url('{% static 'signup/images/bg-01.jpg' %}');"></div>
 
 			<div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
-				<form class="login100-form validate-form" method="POST">
+				<form class="login100-form validate-form" action="/postsignup/" method="POST">
 													{% csrf_token %}
 					<span class="login100-form-title p-b-59">
 						Sign Up
@@ -33,7 +33,7 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
 						<span class="label-input100">Email Address</span>
-						<input class="input100" type="text" name="email" placeholder="Email...">
+						<input class="input100" type="email" name="email" placeholder="Email...">
 						<span class="focus-input100"></span>
 					</div>
 
@@ -45,7 +45,7 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
 						<span class="label-input100">Password</span>
-						<input class="input100" type="text" name="pass" placeholder="****************">
+						<input class="input100" type="password" name="pass" placeholder="****************">
 						<span class="focus-input100"></span>
 					</div>
 
@@ -80,7 +80,7 @@
 							</button>
 						</div>
 
-						<a href="#" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30">
+						<a href="{% url "login" %}" class="dis-block txt3 hov1 p-r-30 p-t-10 p-b-10 p-l-30">
 							Sign in
 							<i class="fa fa-long-arrow-right m-l-5"></i>
 						</a>
