change made in upload-form

--- a/src/templates/upload-form.html
+++ b/src/templates/upload-form.html
@@ -31,7 +31,7 @@
               <button type="button" class="btn btn-block create-account">Upload File</button>
           </div>
             <div class="form-group">
-                <button type="button" class="btn btn-block create-account">Create Account</button>
+                <button type="button" class="btn btn-block create-account">Confirm</button>
             </div>
         </form>
 
