--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -22,7 +22,7 @@
 
 	<div class="limiter">
 		<div class="container-login100">
-			<div class="login100-more" style="background-image: url('{% static 'signup/images/bg-01.jpg' %}');"></div>
+			<div class="login100-more" style="background-image: url('{% static 'signup/images/signupart52.jpg' %}');"></div>
 
 			<div class="wrap-login100 p-l-50 p-r-50 p-t-72 p-b-50">
 				<form class="login100-form validate-form" action="/postsignup/" method="POST">
