--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -137,8 +137,7 @@
             <ul class="nav__links">
                 <li><a href="{% url "dashboard" %}">Home</a></li>
                 <li><a href="{% url "upload" %}">Upload File</a></li>
-                <li><a href="#">Latest Uploads</a></li>
-                <li><a href="#">History</a></li>
+                <li><a href="{% url "all" %}">Latest Uploads</a></li>
                 <li style=color:black>Hello, {{ data }}</li>
             </ul>
         </nav>
