--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -75,7 +75,7 @@
 					</div>
 
 					<div class="text-center p-t-90">
-						<a class="txt1" href="#">
+						<a class="txt1" href="{% url "forgotpass" %}">
 							Forgot Password?
 						</a>
 					</div>
