--- a/src/templates/upload-form.html
+++ b/src/templates/upload-form.html
@@ -205,7 +205,7 @@
                 <span><i class="icon-share-alt"></i></span>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" name="name" placeholder="Book Name">
+                <input type="text" class="form-control item" name="name" placeholder="Book Name" required>
             </div>
             <div class="form-group">
                 <select id="category" class="form-control item" name="category">
