--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -108,11 +108,11 @@
     {% endif %}
 
 
-    <div class="btn2"> <!-- medical -->
+    <div class="btn2"> <!-- mechanical -->
         <a href="{% url "medlist" %}"><i class="fa fa-folder-open" style="font-size:100px;color:rgb(255, 200, 118)"></i></a>
     </div>
 
-    <div class="btn3"> <!-- eco -->
+    <div class="btn3"> <!-- extc -->
         <a href="{% url "ecolist" %}"><i class="fa fa-folder-open" style="font-size:100px;color:rgb(255, 200, 118)"></i></a>
     </div>
 
@@ -120,15 +120,15 @@
         <a href="{% url "otherlist" %}"><i class="fa fa-folder-open" style="font-size:100px;color:rgb(255, 200, 118)"></i></a>
     </div>
 
-    <div class="btn5">  <!-- engineering -->
+    <div class="btn5">  <!-- computer science -->
         <a href="{% url "englist" %}"><i class="fa fa-folder-open" style="font-size:100px;color:rgb(255, 200, 118)"></i></a>
     </div>
 
-    <div class="btn6"> <!-- law -->
+    <div class="btn6"> <!-- information technology -->
         <a href="{% url "lawlist" %}"><i class="fa fa-folder-open" style="font-size:100px;color:rgb(255, 200, 118)"></i></a>
     </div>
 
-    <div class="btn7"> <!-- coding -->
+    <div class="btn7"> <!-- chemical -->
         <a href="{% url "codelist" %}"><i class="fa fa-folder-open" style="font-size:100px;color:rgb(255, 200, 118)"></i></a>
     </div>
 
@@ -153,23 +153,23 @@
     </div>
 
     <div class="t1">
-        <p>Engineering</p>
+        <p>Computer Science</p>
     </div>
     
     <div class="t2">
-        <p>Medical</p>
+        <p>Mechanical</p>
     </div>
     
     <div class="t3">
-        <p>Law</p>
+        <p>Information Technology</p>
     </div>
     
     <div class="t4">
-        <p>Economics</p>
+        <p>EXTC</p>
     </div>
     
     <div class="t5">
-        <p>Coding</p>
+        <p>Chemical</p>
     </div>
     
     <div class="t6">
