--- a/src/templates/upload-form.html
+++ b/src/templates/upload-form.html
@@ -81,6 +81,8 @@
     padding: 50px 70px;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
 }
 
@@ -210,11 +212,11 @@
             <div class="form-group">
                 <select id="category" class="form-control item" name="category">
                     <option value="Category"> Select Category</option>
-                    <option value="Engineering"> Engineering</option>
-                    <option value="Medical"> Medical</option>
-                    <option value="Law"> Law</option>
-                    <option value="Economics"> Economics</option>
-                    <option value="Coding"> Coding</option>
+                    <option value="Computer Science"> Computer Science</option>
+                    <option value="Mechanical"> Mechanical</option>
+                    <option value="Information Technology"> Information Technology</option>
+                    <option value="EXTC"> EXTC</option>
+                    <option value="Chemical"> Chemical</option>
                     <option value="Others"> Others</option>
                 </select>
             </div>
@@ -222,7 +224,7 @@
                 <input type="text" class="form-control item" name="author" placeholder="Author Name">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control item" name="description" placeholder="Description">
+                <input type="text" class="form-control item" name="description" placeholder="Description (max 30 characters)" maxlength="30">
             </div>
             <div class="form-group">
               <input type= "file" id="uploadFile" name="books" class="form-control item" accept=".pdf"/>
