terms and conditions

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -173,7 +173,7 @@
     </div>
     
     <div class="t6">
-        <p>Others</p>
+        <p>Assignments & Others</p>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"crossorigin="anonymous"></script>
