--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -17,7 +17,20 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'signup/vendor/daterangepicker/daterangepicker.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'signup/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'signup/css/main.css' %}">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script>
+	const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+	const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+</script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <body style="background-color: #a36767b9;">
 
 	<div class="limiter">
@@ -62,20 +75,17 @@
 							<label class="label-checkbox100" for="ckb1">
 								<span class="txt1">
 									I agree to the
-									<a href="#" class="txt2 hov1">
-										Terms of User
-									</a>
+									<button id="printButton" type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="All content published here is the sole responsibility of the publisher. Any copyright infringment act is solely liable to the publisher and not the website.">Terms and Conditions</button>
 								</span>
 							</label>
 						</div>
-
-
 					</div>
+
 
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn">
+							<button class="login100-form-btn" id="sbmbtn1"  disabled>
 								Sign Up
 							</button>
 						</div>
@@ -100,5 +110,28 @@
 	<script src="{% static 'signup/vendor/countdowntime/countdowntime.js' %}"></script>
 	<script src="{% static 'signup/js/main.js' %}"></script>
 
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+
+
+	<script>
+		$(document).ready(function(){
+		  $('[data-toggle="popover"]').popover();   
+		});
+		</script>
+
+	<script>
+		var checker = document.getElementById('ckb1');
+		var sendbtn = document.getElementById('sbmbtn1');
+		checker.onchange = function() {
+			if (this.checked){
+				sendbtn.disabled=false;
+
+			}
+		// sendbtn.enabled = !!this.checked;
+		};
+	</script>
+
+	
 </body>
 </html>
